<resources>
    <string name="app_name">AnonymousSipPhoneCall</string>
    <string name="accent_color_string">#ff8800</string>

    <!-- naslovi u nav drawer -->
    <string name="nav_drawer_account">Account Balance</string>
    <string name="nav_drawer_make_phone_call">Make Phone Call</string>
    <string name="nav_drawer_prices_and_rates">Rates</string>
    <string name="nav_drawer_terms_of_use">Terms of Use</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- permissions messages -->
    <string name="permission_rationale_internet">Need Internet Permission</string>
    <string name="permission_rationale_internet_or_network_state">Need permission to check if your device is online and to use Interet</string>
    <string name="permission_rationale_microphone">Need permission to use microphone</string>
    <string name="permission_rationale_contacts">Need permission to read contacts</string>
    <string name="permission_rationale_use_sip_and_mice">Need permissions to make call and use microphone.</string>


    <!-- log in fragment strings -->
    <string name="dear_user_text_1">Dear User,</string>
    <string name="dear_user_text_2">Your account balance is</string>
    <string name="btc_balance">0.0000 BTC</string>
    <string name="add_credit">ADD CREDIT</string>
    <string name="textView_Info_add_credit">Would you like to add credit to make a phone call?</string>

    <!-- Dial pad fragment strings -->
    <string name="toast_unable_to_resolve_activity" />


    <!--Denies access fragment strings -->
    <string name="denied_contacts_access_string">No permission to read your contacts !</string>

    <!--Contacts fragment strings -->
    <string name="foundContacts">found</string>
    <string name="nb_of_filtered_items">0 found</string>
    <string name="searchHint">search contacts</string>
    <string name="name">name</string>

    <string name="no_network_info">No Network Connection</string>


    <string name="noHistoryMessage">No call history.</string>
    <string name="clear_history">Clear History</string>
    <string name="alert_dialog_message">Are you sure you want to clear call history ?</string>
    <string name="alert_dialog_title">Clear history</string>
    <string name="searchHintPrices">search</string>

    <string name="your_BTC_address_is">Your BTC address</string>
    <string name="madeup_btc_address">1234567890QWERTY</string>

    <!--konstante za  SharedPreferences -->
    <string name="CURRENT_CREDIT">current_credit</string>
    <string name="isCreditChanged">credit_chenged</string>
    <string name="PRICES_CHANGED">prices_changed</string>


    <!--konstante za  progres bar -->
    <string name="progres_bar_text">Processing</string>
    <string name="destination">Destination</string>
    <string name="prefix">Prefix</string>
    <string name="sec">$/sec</string>
    <string name="enter_number">enter number</string>

    <!--konstante za SipCallActuvuty Layout -->
    <string name="readySipCallActivity">Ready</string>

    <!--konstante za DialPad Fragment -->
    <string name="DialPad_menu_paste">Paste number</string>
    <string name="dialpad_snackbar_message">Not valid international number.</string>
    <string name="detail_fragment_snackbar_message">App is unaware of your location, please, enter prefix to Contact\'s phone
        number,eg. for USA +1.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
