<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_account_balance_black_48dp"
            android:title="@string/nav_drawer_account" />
        <item
            android:id="@+id/make_phone_call"
            android:icon="@drawable/ic_dialer_sip_black_48dp"
            android:title="@string/nav_drawer_make_phone_call" />
        <item
            android:id="@+id/prices_and_rates"
            android:icon="@drawable/ic_description_black_48dp"
            android:title="@string/nav_drawer_prices_and_rates" />


    </group>


</menu>
