<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logInMainFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sipbtc.anonymoussipphonecall.LogIn_Fragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/logInMainConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dearUser1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/dear_user_text_1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDearUser2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dear_user_text_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/dearUser1"
            app:layout_constraintStart_toStartOf="@+id/dearUser1"
            app:layout_constraintTop_toBottomOf="@+id/dearUser1" />

        <TextView
            android:id="@+id/textViiewAccountBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btc_balance"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/dearUser1"
            app:layout_constraintStart_toStartOf="@+id/dearUser1"
            app:layout_constraintTop_toBottomOf="@+id/textViewDearUser2" />

        <Button
            android:id="@+id/buttonAddCredit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="?attr/colorPrimaryDark"
            android:elevation="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/add_credit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViiewAccountBalance"
            app:layout_constraintStart_toStartOf="@+id/textViiewAccountBalance" />

        <TextView
            android:id="@+id/textViewAddCreditInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/textView_Info_add_credit"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/buttonAddCredit"
            app:layout_constraintEnd_toEndOf="@+id/buttonAddCredit"
            app:layout_constraintStart_toStartOf="@+id/buttonAddCredit" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutForProgresBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LinLayoutForProgresBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/background_light"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBarLogIn"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/progresBarText"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="Authenticating"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/progressBarLogIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/progressBarLogIn"
                app:layout_constraintTop_toTopOf="@+id/progressBarLogIn" />


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>



</FrameLayout>
